--- a/acquire.ipynb
+++ b/acquire.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "eca44a48",
+   "id": "59d6e9a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6072acf1",
+   "id": "f6da54d6",
    "metadata": {},
    "source": [
     "# 1. Using the code from the lesson as a guide and the REST API from https://swapi.dev/ as we did in the lesson, create a dataframe named people that has all of the data for people."
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "850bf159",
+   "id": "d129dc57",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "64e51401",
+   "id": "758f40a0",
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "78e367e5",
+   "id": "2841c64a",
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "a867396a",
+   "id": "6aa4edf5",
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "1d2cf376",
+   "id": "408f4a8f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "5ea42baf",
+   "id": "119de2f1",
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +486,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "d8a7a36f",
+   "id": "f46c589e",
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +659,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "88fc42b4",
+   "id": "e026b5db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -685,7 +685,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "046eca2e",
+   "id": "34242713",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,7 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "0b1c8cd8",
+   "id": "794a6d7b",
    "metadata": {},
    "outputs": [
     {
@@ -1080,7 +1080,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ba09fdf",
+   "id": "2b4a9124",
    "metadata": {},
    "source": [
     "# 2. Do the same thing, but for planets."
@@ -1089,7 +1089,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "1c88549a",
+   "id": "d2858ac8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1101,7 +1101,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "4137e03e",
+   "id": "dfd272c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1120,7 +1120,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "200c6b66",
+   "id": "8ede4d0d",
    "metadata": {},
    "outputs": [
     {
@@ -2632,7 +2632,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c79bd10b",
+   "id": "7ed12a4b",
    "metadata": {},
    "source": [
     "# 3. Extract the data for starships."
@@ -2641,7 +2641,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "0cbbd567",
+   "id": "cf368f0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2653,7 +2653,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "2168f146",
+   "id": "2c3c10c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2672,7 +2672,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "ee0c6819",
+   "id": "473f9244",
    "metadata": {
     "scrolled": true
    },
@@ -3796,7 +3796,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ab43e09",
+   "id": "98b6f696",
    "metadata": {},
    "source": [
     "# 4. Save the data in your files to local csv files so that it will be faster to access in the future."
@@ -3805,7 +3805,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "e041273b",
+   "id": "2238fa6e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3820,7 +3820,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b70b36ce",
+   "id": "6b122125",
    "metadata": {},
    "source": [
     "# 5. Combine the data from your three separate dataframes into one large dataframe."
@@ -3829,7 +3829,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "fc3f3e36",
+   "id": "53aa608e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3861,7 +3861,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "e60c3050",
+   "id": "de5a5198",
    "metadata": {},
    "outputs": [
     {
@@ -4297,7 +4297,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17befab6",
+   "id": "3dc2c925",
    "metadata": {},
    "source": [
     "### 6. Acquire the Open Power Systems Data for Germany, which has been rapidly expanding its renewable energy production in recent years. The data set includes country-wide totals of electricity consumption, wind power production, and solar power production for 2006-2017. You can get the data here: https://raw.githubusercontent.com/jenfly/opsd/master/opsd_germany_daily.csv"
@@ -4306,7 +4306,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "489fadf9",
+   "id": "91fbd96b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4317,7 +4317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "542f5528",
+   "id": "7eaa98af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4329,14 +4329,14 @@
     "    # get the germany data\n",
     "    germany = pd.read_csv(\n",
     "    'https://raw.githubusercontent.com/jenfly/opsd/master/opsd_germany_daily.csv')\n",
-    "    # return the datafram\n",
+    "    # return the dataframe\n",
     "    return germany"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "a870e9b1",
+   "id": "64b251ee",
    "metadata": {},
    "outputs": [
     {
